--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,8 @@
 	  <cucumber.version>7.15.0</cucumber.version>
 	  <webdrivermanager.version>5.9.2</webdrivermanager.version>
 	  <log.version>2.17.1</log.version>
+	  <maven.compiler.source>1.8</maven.compiler.source>
+      <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
   <dependencies>
      <dependency>
@@ -47,4 +49,20 @@
          <version>${webdrivermanager.version}</version>
      </dependency>
   </dependencies>
+  <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>emicalculator.runner.Runner</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>    
 </project>
