--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,3 +1,3 @@
-chrome.driver.path=\home\abhishek\Webdrivers
+chrome.driver.path=/home/abhishek/Webdrivers/chromedriver
 gecko.driver.path=/path/to/geckodriver
 home.url=https://emicalculator.net/
